Bug 615741 - Too large canvases don't draw and be black. r=joe a=joe